097_bst_map/grade.txt
Grading at 11/08/2019:17:08:13.611886
For commit ID 4e9f568896446c8a6a442c29262da9c934b90d8e
Grading at Fri Nov  8 12:08:12 EST 2019
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:47:7: error: type ‘class BstMap<int, int>’ argument given to ‘delete’, expected pointer
       delete temp;
       ^~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:47:7: error: type ‘class BstMap<int, std::__cxx11::basic_string<char> >’ argument given to ‘delete’, expected pointer
       delete temp;
       ^~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:47:7: error: type ‘class BstMap<int, Tester>’ argument given to ‘delete’, expected pointer
       delete temp;
       ^~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:47:7: error: type ‘class BstMap<std::__cxx11::basic_string<char>, int>’ argument given to ‘delete’, expected pointer
       delete temp;
       ^~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:47:7: error: type ‘class BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’ argument given to ‘delete’, expected pointer
       delete temp;
       ^~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:47:7: error: type ‘class BstMap<std::__cxx11::basic_string<char>, Tester>’ argument given to ‘delete’, expected pointer
       delete temp;
       ^~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:47:7: error: type ‘class BstMap<Tester, int>’ argument given to ‘delete’, expected pointer
       delete temp;
       ^~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:47:7: error: type ‘class BstMap<Tester, std::__cxx11::basic_string<char> >’ argument given to ‘delete’, expected pointer
       delete temp;
       ^~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:47:7: error: type ‘class BstMap<Tester, Tester>’ argument given to ‘delete’, expected pointer
       delete temp;
       ^~~~~~
The code did not compile.  This test failed.

Overall Grade: F
